--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,8 @@
   text-align: center;
   font-family: Muli-4n, Muli, Helvetica, Arial, sans-serif;
   color: #7f8c8d;
+  font-weight: 500;
 }
-
 
 .ProductGroupContainer {
   height: 480px;
@@ -19,8 +19,8 @@
 
 .ProductGroupContainer:hover {
   cursor: pointer;
-  background-color: #7f8c8d;
-  color: white;
+  background-color: #f6e58d;
+
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2), 0 -1px 0px rgba(0, 0, 0, 0.02);
 }
 
