--- a/src/components/BasicCarousel/styles.css
+++ b/src/components/BasicCarousel/styles.css
@@ -3,7 +3,7 @@
 
 .carousel a {
   transition: all 0.4s ease-in-out;
-  background-color: rgb(0, 0, 0, 0.2);
+  background-color: rgba(153, 75, 75, 0.075);
 }
 
 .carousel a:hover {
